<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ValleCOM</string>
    <string name="title_activity_comanda">Comanda</string>
    <string name="title_activity_buscador">Buscar Articulos</string>
    <string name="title_activity_op_mesas">Operar con mesas</string>
    <string name="title_activity_cuenta">Cuenta</string>
    <string name="title_activity_mostrar_pedidos">Lista de pedidos</string>
    <string name="title_activity_sugerencias">Sugerencias</string>
    <string name="entrar">Entrar</string>
    <string name="crear">Crear</string>
    <string name="agregar_empresas">Agregar empresa</string>
    <string name="pass">Entra contraseña</string>
    <string name="repitePass">Repetir contraseña</string>
    <string name="lista_pedidos">lista_pedidos</string>
    <string name="cambiar_linea">cambiar_linea</string>
    <string name="test_cantidad">1</string>
    <string name="borrar_item">borrar_item</string>
    <string name="texto_prueba">Cocacola</string>
    <string name="mesa_z1">Mesa Z1</string>
    <string name="total">Total:</string>
    <string name="test_precio">0.00 €</string>
    <string name="salir">Salir</string>
    <string name="imprimir">Imprimir</string>
    <string name="marcar">Marcar</string>
    <string name="text_prueba">Cocacola</string>
    <string name="enviar">enviar</string>
    <string name="nota">Nota</string>
    <string name="num_articulos">Num articulos</string>
    <string name="find">find</string>
    <string name="lista">lista</string>
    <string name="camarero">Camarero</string>
    <string name="inicializando">Inicializando....</string>
    <string name="show">show</string>
    <string name="title_activity_autorias">Autorias</string>
    <string name="cancel">cancel</string>
    <string name="autorizar">autorizar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="uno">1</string>
    <string name="buscar">buscar</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="title_activity_refill">Rellenar</string>
    <string name="mensaje">mensaje</string>
    <string name="lista_mesas">Lista de mesas</string>
    <string name="title_activity_sendmensajes">Mensajes</string>
    <string name="mesa">Mesa</string>
    <string name="cambiar_mesa">cambiar_mesa</string>
    <string name="nombre_emp">Nombre emp</string>
    <string name="aceptar">aceptar</string>
    <string name="title">Title</string>
    <string name="subtitle">SubTitle</string>
    <string name="agregar_empresa">Agregar empresas\n</string>
    <string name="buscador_articulos">Burscar articulos</string>
    <string name="num_uno">1</string>
    <string name="no_hay_pedido">No hay pedido</string>
    <string name="rellenar">Rellenar</string>
    <string name="nombre_empresa">Nombre empresa</string>
    <string name="url">URL</string>
    <string name="agregar">Agregar</string>
    <string name="cobrar">cobrar</string>
    <string name="borrar_empresa">Borrar empresa</string>
    <string name="empresa_activa">activar_empresa</string>
    <string name="borrar_linea">Borrar linea\n</string>
    <string name="anadir_linea">Añadir una linea</string>
    <string name="title_activity_chatbot">ValleBot</string>

</resources>
