<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lblCan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/uno"
        android:textSize="13sp"
        android:layout_marginStart="15dp" />

    <TextView
        android:id="@+id/lblDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/texto_prueba"
        android:textSize="13sp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/lblCan" />

    <TextView
        android:id="@+id/lblPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/test_precio"
        android:textSize="12sp"
        android:layout_alignEnd="@+id/lblTotal" />

    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblPrecio"
        android:layout_alignParentEnd="true"
        android:text="@string/test_precio"
        android:textSize="16sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/total"
        android:id="@+id/textView"
        android:textSize="16sp"
        android:layout_below="@+id/lblDescripcion"
        android:layout_toStartOf="@+id/lblTotal"
        android:layout_marginEnd="29dp" />

</RelativeLayout>