<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/btnReenviarLinea"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:gravity="center_vertical"
    android:minHeight="50dp"
    android:orientation="horizontal">

        <TextView
            android:id="@+id/lblCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="35dp"
            android:text="@string/test_cantidad"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/texto_prueba"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnBorrarPedido"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/fondo_redondeado_btn_xml"
            android:contentDescription="@string/app_name"
            android:onClick="clickServido"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_delete" />

</LinearLayout>