<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">


        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/fondo_btn_xml"
            android:onClick="clickCan"
            android:tag="1"
            android:text="@string/uno"
            android:textSize="12sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/fondo_btn_xml"
            android:onClick="clickCan"
            android:tag="2"
            android:text="@string/dos"
            android:textSize="12sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/fondo_btn_xml"
            android:onClick="clickCan"
            android:tag="3"
            android:text="@string/tres"
            android:textSize="12sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/fondo_btn_xml"
            android:onClick="clickCan"
            android:tag="4"
            android:text="@string/cuatro"
            android:textSize="12sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/fondo_btn_xml"
            android:onClick="clickCan"
            android:tag="5"
            android:text="@string/cinco"
            android:textSize="12sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/fondo_btn_xml"
            android:onClick="clickCan"
            android:tag="6"
            android:text="@string/seis"
            android:textSize="12sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/fondo_btn_xml"
            android:onClick="clickCan"
            android:tag="7"
            android:text="@string/siete"
            android:textSize="12sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/fondo_btn_xml"
            android:onClick="clickCan"
            android:tag="8"
            android:text="@string/ocho"
            android:textSize="12sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/fondo_btn_xml"
            android:onClick="clickCan"
            android:tag="9"
            android:text="@string/nueve"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout2"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/pneBotones"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/seccion_uno"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_btn_xml"
                android:contentDescription="@string/uno"
                android:longClickable="true"
                android:onClick="clickMenu"
                android:padding="5dp"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/seccion_dos"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_btn_xml"
                android:longClickable="true"
                android:onClick="clickMenu"
                android:padding="5dp"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/seccion_tres"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_btn_xml"
                android:contentDescription="@string/tres"
                android:longClickable="true"
                android:onClick="clickMenu"
                android:padding="5dp"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/seccion_cuatro"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_btn_xml"
                android:contentDescription="@string/cuatro"
                android:longClickable="true"
                android:onClick="clickMenu"
                android:padding="5dp"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/seccion_cinco"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_btn_xml"
                android:longClickable="true"
                android:onClick="clickMenu"
                android:padding="5dp"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/seccion_seis"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_btn_xml"
                android:contentDescription="@string/seis"
                android:onClick="clickMenu"
                android:padding="5dp"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/btnBuscarArticulo"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_btn_xml"
                android:contentDescription="@string/buscar"
                android:longClickable="true"
                android:onClick="clickBuscarArticulo"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/lupa"
                android:tag="buscar" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/pneArt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.85"
            android:orientation="vertical"
            android:stretchColumns="*">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"/>
        </LinearLayout>

    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_reffil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="70dp"
        android:onClick="onRefill"
        fab:fab_colorNormal="@color/pink"
        fab:fab_colorPressed="@color/pink_pressed"
        fab:fab_icon="@drawable/refill" />

</RelativeLayout>