<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/nombre_empresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/nombre_empresa"
        android:textStyle="bold"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txt_nombre_empresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:hint="Nombre de la empresa"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/url"
        android:textStyle="bold"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txt_URL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:hint="https://ejemplo.com"
        android:inputType="textUri"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/label_alias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Alias del Dispositivo"
        android:textStyle="bold"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txt_alias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:hint="Alias para identificar este dispositivo"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/add_empresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_rounded"
        android:minHeight="48dp"
        android:text="@string/agregar" />
</LinearLayout>