<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/grupo_pedidos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_pink">

            <ImageButton
                android:id="@+id/reeviarPedido"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="51dp"
                android:layout_marginStart="51dp"
                android:background="@drawable/bg_black_semitransparent"
                android:contentDescription="@string/enviar"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/enviar" />

            <ImageButton
                android:id="@+id/borrar_pedido"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/bg_black_semitransparent"
                android:contentDescription="@string/borrar_item"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/papelera" />

            <TextView
                android:id="@+id/texto_mesa"
                android:layout_width="300dp"
                android:layout_height="25dp"
               android:layout_marginTop="12dp"
                android:paddingStart="15dp"
                android:text="@string/texto_prueba"
                android:textColor="#212121" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lista_pedidos_grupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/blue_light"
            android:orientation="vertical"
            android:padding="5dp">

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>